<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act_MainActivityLogin">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="425dp"
        android:layout_height="144dp"
        android:layout_marginBottom="48dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/txtUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName"
        app:srcCompat="@drawable/csbg"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgbg"
        android:layout_width="332dp"
        android:layout_height="102dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="18dp"
        android:alpha="0.2"
        android:scaleX="1.2"
        android:src="@drawable/csbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginBottom="28dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textPassword"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/username_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/txtLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.05"
        android:text="@string/capitals_title"
        android:textAppearance="@style/mainHeader"
        android:textSize="@dimen/headerSize"
        app:autoSizeMaxTextSize="20pt"
        app:autoSizeMinTextSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="20dp"
        android:background="@color/greyTheme"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/login"
        android:textCursorDrawable="@android:color/holo_green_dark"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="56dp"
        android:background="@color/greyTheme"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/register"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/imgbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>