<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act_NewSpot">

    <EditText
        android:id="@+id/txtSpotName"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/spot_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/spnType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraImage" />

    <EditText
        android:id="@+id/txtSpotTag"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/spot_tag"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/spnLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnType" />

    <ImageView
        android:id="@+id/imgbg"
        android:layout_width="332dp"
        android:layout_height="102dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="18dp"
        android:alpha="0.2"
        android:scaleX="1.2"
        android:src="@drawable/csbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/greenTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNewSpotBanner"
            android:layout_width="326dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="48dp"
            android:letterSpacing="0.06"
            android:fontFamily="@font/open_sans"
            android:gravity="fill_vertical"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/new_spot"
            android:textColor="@color/activityBackground"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="@color/greyTheme"
            android:textColorLink="@color/greyTheme"
            android:textSize="14sp"
            android:typeface="normal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="48dp" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="1dp"
            android:fontFamily="serif-monospace"
            android:text="@string/cameraSymbol"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/cameraImage"
        android:layout_width="285dp"
        android:layout_height="246dp"
        android:src="@drawable/csicon"
        app:layout_constraintBottom_toTopOf="@+id/txtSpotName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/imgbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnLocation" />

    <Spinner
        android:id="@+id/spnType"
        style="@android:style/Widget.Material.Spinner.Underlined"
        android:layout_width="270dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toTopOf="@+id/txtSpotTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpotName" />

    <Spinner
        android:id="@+id/spnLocation"
        style="@android:style/Widget.Material.Spinner.Underlined"
        android:layout_width="270dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpotTag" />

</androidx.constraintlayout.widget.ConstraintLayout>