<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act_Register">

    <ImageView
        android:id="@+id/imgbg"
        android:layout_width="332dp"
        android:layout_height="102dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="18dp"
        android:alpha="1"
        android:scaleX="1.2"
        android:src="@drawable/csbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/txtCity"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="50dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/home_city_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFullName" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textPassword"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/txtFullName"
        app:layout_constraintStart_toStartOf="@+id/txtFullName"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <EditText
        android:id="@+id/txtFullName"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/full_name_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/txtCity"
        app:layout_constraintStart_toStartOf="@+id/txtCity"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/username_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/txtLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/txtLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.05"
        android:text="@string/capitals_title"
        android:textAppearance="@style/mainHeader"
        android:textSize="@dimen/headerSize"
        app:autoSizeMaxTextSize="20pt"
        app:autoSizeMinTextSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/txtUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:background="@color/greyTheme"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/register"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/imgbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>